Added leaflet library

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "server": "json-server --watch src/data/cities.json --port 8000"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "leaflet": "^1.9.4",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
