Added fetch data in form and created new city

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "react": "19.0.0-rc.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "19.0.0-rc.1",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
